--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Paulo-DevTallos/NodeJS-API-cleanArchtecture/issues"
   },
-  "homepage": "https://github.com/Paulo-DevTallos/NodeJS-API-cleanArchtecture#readme"
+  "homepage": "https://github.com/Paulo-DevTallos/NodeJS-API-cleanArchtecture#readme",
+  "devDependencies": {
+    "standard": "^17.0.0"
+  }
 }
