--- a/package.json
+++ b/package.json
@@ -6,6 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "lint-staged": {
+    "*.js": [
+      "standard --fix",
+      "git add"
+    ]
+  },
+  "husk": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Paulo-DevTallos/NodeJS-API-cleanArchtecture.git"
@@ -18,6 +29,8 @@
   },
   "homepage": "https://github.com/Paulo-DevTallos/NodeJS-API-cleanArchtecture#readme",
   "devDependencies": {
+    "husk": "^0.5.3",
+    "lint-staged": "^13.1.0",
     "standard": "^17.0.0"
   }
 }
